# fastapi-simple-microsoft-auth

./: .gitignore  README.md  poetry.toml  pyproject.toml
examples/multi_tenant/: main.py
examples/multi_tenant_personal/: main.py
examples/single_tenant/: main.py
fastapi_simple_microsoft_auth/: __init__.py  _oauth2_auth_base.py  graph_api_single_tenant_auth.py  oauth2_multi_tenant_auth.py  oauth2_multi_tenant_personal_auth.py  oauth2_single_tenant_auth.py
